Decoded the message

--- a/coded_correspondence.ipynb
+++ b/coded_correspondence.ipynb
@@ -40,10 +40,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "message_to_decode = 'xuo jxuhu! jxyi yi qd unqcfbu ev q squiqh syfxuh. muhu oek qrbu je tusetu yj? y xefu ie! iudt cu q cuiiqwu rqsa myjx jxu iqcu evviuj!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alphabet = ['a', 'b', 'c', 'd', 'e', \n",
+    "            'f', 'g', 'h', 'i', 'j', \n",
+    "            'k', 'l', 'm', 'n', 'o', \n",
+    "            'p', 'q', 'r', 's', 't',\n",
+    "            'u', 'v', 'w', 'x', 'y',\n",
+    "            'z']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "message = message_to_decode.split()\n",
+    "decoded_message = ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for word in message:\n",
+    "    decoded_word = ''\n",
+    "    for letter in word:\n",
+    "        if(letter in alphabet):\n",
+    "            decoded_word += alphabet[(alphabet.index(letter) + 10) % 26]\n",
+    "        else:\n",
+    "            decoded_word += letter\n",
+    "    decoded_message += decoded_word + ' '\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hey there! this is an example of a caesar cipher. were you able to decode it? i hope so! send me a message back with the same offset! \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(decoded_message)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
