Completed the excercise! Vigenere Cipher was fun to do

--- a/coded_correspondence.ipynb
+++ b/coded_correspondence.ipynb
@@ -403,10 +403,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "shifting_values = [alphabet.index(letter) for letter in 'friends']\n",
+    "shifting_values\n",
+    "\n",
+    "def vigenere_cipher(message, phrase, decoding=True):\n",
+    "    result = ''\n",
+    "    counter = 0\n",
+    "    if(decoding):    \n",
+    "        for word in message:\n",
+    "            decoded_word = ''\n",
+    "            for letter in word:\n",
+    "                if (letter in alphabet):\n",
+    "                    decoded_word += alphabet[(alphabet.index(letter) + alphabet.index(phrase[counter % len(phrase)])) % 26]\n",
+    "                    counter += 1\n",
+    "                else:\n",
+    "                    decoded_word += letter\n",
+    "            result += decoded_word\n",
+    "        return result\n",
+    "    else:\n",
+    "        for word in message:\n",
+    "            encoded_word = ''\n",
+    "            for letter in word:\n",
+    "                if (letter in alphabet):\n",
+    "                    encoded_word += alphabet[(alphabet.index(letter) - alphabet.index(phrase[counter % len(phrase)])) % 26]\n",
+    "                    counter += 1\n",
+    "                else:\n",
+    "                    encoded_word += letter\n",
+    "            result += encoded_word\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'you were able to decode this? nice work! you are becoming quite the expert at crytography!'"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vigenere_cipher('txm srom vkda gl lzlgzr qpdb? fepb ejac! ubr imn tapludwy mhfbz cza ruxzal wg zztcgcexxch!', 'friends')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vigenere_cipher('barry is the spy', 'dog', False) == 'ymlok cp fbb ejv'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -422,10 +491,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "message_to_send = vigenere_cipher('It was trully fun excercise! I was enjoying coding this!', 'codeacademy', False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thank you! \n",
+      " xuo jxuhu! jxyi yi qd unqcfbu ev q squiqh syfxuh. muhu oek qrbu je tusetu yj? y xefu ie! iudt cu q cuiiqwu rqsa myjx jxu iqcu evviuj!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Thank you! \\n', message_to_decode)"
+   ]
   },
   {
    "cell_type": "markdown",
